fix submit button style on safari

--- a/style.sass
+++ b/style.sass
@@ -26,6 +26,9 @@ h2
 h3
     font-size: 40px
     line-height: 60px
+h4
+    font-size: 24px
+    line-height: 36px
 p
     font-size: 20px
     line-height: 30px
@@ -66,11 +69,12 @@ img
     h3
         font-size: 20px
         line-height: 30px        
+    h4
+        font-size: 20px
+        line-height: 30px        
     p
         font-size: 14px
         line-height: 21px
-    a        
-        font-size: 12px
     .cta    
         font-size: 12px
         line-height: 18px
@@ -93,12 +97,8 @@ header .container
 @media only screen and (max-width: 700px)  
     header .container
         margin-top: 24px
-        .cta
-            font-size: 9.41px
         img
-            width: 96px    
-        .cta
-            padding: 5px 18px
+            width: 96px   
 
 // Hero            
 .hero .container
@@ -263,7 +263,7 @@ header .container
             line-height: 36px
             margin-bottom: 40px
     .footer-bg
-        padding-top: 180px
+        padding-top: 150px
         margin-top: 150px
         background-image: url('./images/bg-footer-top-mobile.svg')
 
@@ -328,6 +328,8 @@ input:-webkit-autofill:active
     font-weight: 600   
     border-radius: 6px
     cursor: pointer
+    font-size: 16px
+    line-height: 24px
     &:hover
         background-color: $Light-Pink
 #subscribed
@@ -349,7 +351,7 @@ input:-webkit-autofill:active
     footer 
         .container
             flex-direction: column-reverse
-            padding: 100px calc(8px + 1.5625vw) 46px calc(8px + 1.5625vw)
+            padding: 10px calc(8px + 1.5625vw) 46px calc(8px + 1.5625vw)
     .footer-left
         margin-top: 104px
     .lorem
@@ -363,5 +365,6 @@ input:-webkit-autofill:active
     #email
         margin-right: 0    
     #submit
-        background-color: $Pink
         width: 160px
+        font-size: 16px
+        
